input level_n_prof_bonus_calculator

--- a/src/dnd/dnd_dashboard.ipynb
+++ b/src/dnd/dnd_dashboard.ipynb
@@ -1,11 +1,32 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Level and Proficiency Bonus Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from level_n_prof_bonus_calculator import lvl_calc, prof_calc\n",
+    "\n",
+    "XP = 0\n",
+    "lvl_calc(XP)\n",
+    "prof_calc(XP)"
+   ]
+  }
+ ],
  "metadata": {
   "interpreter": {
-   "hash": "fa48fdcfbdb70017895bac091f21dd6e9d8542f6172453d7cb960256c55ca3ea"
+   "hash": "0289f361c2b83a3745cddaf831ce9b822099f1199e29a51d976359dd03db687d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3.9.13 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -19,7 +40,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
