--- a/src/dnd/dnd_dashboard.ipynb
+++ b/src/dnd/dnd_dashboard.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -18,26 +18,36 @@
        "2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from level_n_prof_bonus_calculator import lvl_calc, prof_calc\n",
+    "import level_calc\n",
     "\n",
     "XP = 310\n",
-    "lvl_calc(XP)"
+    "level_calc.lvl_calc(XP)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "print()"
-   ]
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'level' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tmush\\OneDrive\\Documents\\Python Scripts\\DnD\\src\\dnd\\dnd_dashboard.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tmush/OneDrive/Documents/Python%20Scripts/DnD/src/dnd/dnd_dashboard.ipynb#ch0000004?line=0'>1</a>\u001b[0m level\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'level' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -57,8 +67,10 @@
     }
    ],
    "source": [
+    "from prof_bonus_calc import lvl_calc\n",
     "\n",
-    "print(f'Proficiency Bonus = +{proficiency_bonus}')"
+    "XP = 310\n",
+    "lvl_calc(XP)"
    ]
   }
  ],
