--- a/src/dnd/dnd_dashboard.ipynb
+++ b/src/dnd/dnd_dashboard.ipynb
@@ -9,25 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'level' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tmush\\OneDrive\\Documents\\Python Scripts\\DnD\\src\\dnd\\dnd_dashboard.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tmush/OneDrive/Documents/Python%20Scripts/DnD/src/dnd/dnd_dashboard.ipynb#ch0000001?line=2'>3</a>\u001b[0m XP \u001b[39m=\u001b[39m \u001b[39m310\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tmush/OneDrive/Documents/Python%20Scripts/DnD/src/dnd/dnd_dashboard.ipynb#ch0000001?line=3'>4</a>\u001b[0m lpc\u001b[39m.\u001b[39mlvl_calc(XP)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tmush/OneDrive/Documents/Python%20Scripts/DnD/src/dnd/dnd_dashboard.ipynb#ch0000001?line=5'>6</a>\u001b[0m level \u001b[39m=\u001b[39m level \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'level' is not defined"
+     ]
     }
    ],
    "source": [
-    "import level_calc\n",
+    "import level_and_proficiency_bonus_calculator as lpc\n",
     "\n",
     "XP = 310\n",
-    "level_calc.lvl_calc(XP)"
+    "lpc.lvl_calc(XP)"
    ]
   },
   {
