initial commit of rng to dashboard

--- a/src/dnd/dnd_dashboard.ipynb
+++ b/src/dnd/dnd_dashboard.ipynb
@@ -32,6 +32,35 @@
     "print(f'Level = {lvl}')\n",
     "print(f'Proficiency Bonus = +{pb}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Number Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On a d10 you rolled a 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random_number_generator as rng\n",
+    "\n",
+    "dice = 10\n",
+    "\n",
+    "dice, roll = rng.rand_int_gen(dice)\n",
+    "print(f'On a d{dice} you rolled a {roll}')"
+   ]
   }
  ],
  "metadata": {
