update dashboard with dice_roller

--- a/src/dnd/dnd_dashboard.ipynb
+++ b/src/dnd/dnd_dashboard.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Number Generator"
+    "## Dice Roller"
    ]
   },
   {
@@ -49,29 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On a d6 you rolled a 6\n"
+      "A single d6 roll: 3\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
+    "import dice_roller\n",
     "\n",
     "\n",
-    "def single_roll(type_of_dice: int = 20) -> int:\n",
-    "    roll = random.randint(1, type_of_dice)\n",
-    "    return roll\n",
-    "\n",
-    "\n",
-    "dice = 6\n",
-    "roll = single_roll(dice)\n",
-    "print(f'On a d{dice} you rolled a {roll}')"
+    "type_of_die = 6\n",
+    "roll = dice_roller.single_roll(type_of_die)\n",
+    "print(f'A single d{type_of_die} roll: {roll}')"
    ]
   },
   {
@@ -83,15 +78,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 rolls of a d6: [2, 1, 6, 3]\n",
+      "\n",
+      "SUM of 4 rolls: 12\n",
+      "AVG of 4 rolls: 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dice_roller\n",
+    "\n",
+    "\n",
+    "number_of_dice = 4\n",
+    "type_of_dice = 6\n",
+    "list_of_rolls = dice_roller.multiple_rolls(number_of_dice, type_of_dice)\n",
+    "\n",
+    "print(f'{len(list_of_rolls)} rolls of a d{type_of_dice}: {list_of_rolls}')\n",
+    "print()\n",
+    "print(f'SUM of {len(list_of_rolls)} rolls: {sum(list_of_rolls)}')\n",
+    "print(f'AVG of {len(list_of_rolls)} rolls: {sum(list_of_rolls)/len(list_of_rolls)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "\n",
-    "for number_of_rolls in "
-   ]
+   "source": []
   }
  ],
  "metadata": {
